Spacing fixes

--- a/assets/css/ztake.css
+++ b/assets/css/ztake.css
@@ -404,6 +404,10 @@ footer#footer ul.social a {
 }
 
 @media (max-width:991.98px) {
+    body > section {
+        padding: 40px 0;
+    }
+
     section#intro {
         text-align: center;
     }
@@ -443,6 +447,7 @@ footer#footer ul.social a {
 
     section#reasons p {
         margin-left: 0;
+        margin-bottom: 0;
     }
 
     section#features {
@@ -455,6 +460,10 @@ footer#footer ul.social a {
 }
 
 @media (max-width:767.98px) {
+    body > section {
+        padding: 30px 0;
+    }
+
     section#intro h1 {
         font-size: 24px;
     }
@@ -490,6 +499,10 @@ footer#footer ul.social a {
 
     section#reasons {
         text-align: center;
+    }
+
+    section#reasons p {
+        margin-left: auto;
     }
 
     footer#footer .based {
